feat: update Budget Analysis merge md file

--- a/upcoming-release-notes/6137.md
+++ b/upcoming-release-notes/6137.md
@@ -3,4 +3,4 @@ category: Features
 authors: [tabedzki]
 ---
 
-Add "Budget Analysis" : a report that tracks the balance of a Category similar to the "Cash Flow" Report
+Add "Budget Analysis" : a report that tracks the balance of your budget categories over time. Displays budgeted amounts, actual spending, overspending adjustments, and cumulative balance, considering category rollover settings.
