Update authorship in release notes and refine clock-drift error messaging for clarity

--- a/upcoming-release-notes/6789.md
+++ b/upcoming-release-notes/6789.md
@@ -1,6 +1,6 @@
 ---
 category: Enhancements
-authors: [Copilot]
+authors: [MatissJanis]
 ---
 
-Enhance clock drift error handling with user-friendly notifications and actionable guidance.
+Add user-friendly error message for clock-drift issues
