--- a/upcoming-release-notes/6822.md
+++ b/upcoming-release-notes/6822.md
@@ -3,4 +3,4 @@ category: Maintenance
 authors: [MikesGlitch]
 ---
 
-Remove github pages deploys in favor of netlify
+Remove GitHub pages deploys in favor of Netlify
