--- a/packages/docs/blog/2026-02-02-release-26-2-0.md
+++ b/packages/docs/blog/2026-02-02-release-26-2-0.md
@@ -113,16 +113,16 @@ Version: v26.2.0
 - [#6530](https://github.com/actualbudget/actual/pull/6530) Add token-based authentication to GitHub Actions for PR creation and release notes generation. — thanks @MatissJanis
 - [#6531](https://github.com/actualbudget/actual/pull/6531) Disable some CI workflows in forks — thanks @jfdoming
 - [#6536](https://github.com/actualbudget/actual/pull/6536) Disable coderabbit generated PR summaries — thanks @MatissJanis
-- [#6544](https://github.com/actualbudget/actual/pull/6544) Fix electron workflow job ordering for calculating hashes for flathub release. — thanks @MikesGlitch
-- [#6545](https://github.com/actualbudget/actual/pull/6545) Fix electron master publish to flathub caused by hashes calculation — thanks @MikesGlitch
+- [#6544](https://github.com/actualbudget/actual/pull/6544) Fix electron workflow job ordering for calculating hashes for Flathub release. — thanks @MikesGlitch
+- [#6545](https://github.com/actualbudget/actual/pull/6545) Fix electron master publish to Flathub caused by hashes calculation — thanks @MikesGlitch
 - [#6560](https://github.com/actualbudget/actual/pull/6560) Upgrade oxlint and oxfmt dependencies, improve accessibility, and fix JSON formatting issues. — thanks @MatissJanis
 - [#6581](https://github.com/actualbudget/actual/pull/6581) Add merge_group trigger to e2e tests workflow for executing during merge queue events. — thanks @MatissJanis
 - [#6582](https://github.com/actualbudget/actual/pull/6582) Update CodeRabbit configuration to include review workflow and labeling instructions. — thanks @MatissJanis
 - [#6584](https://github.com/actualbudget/actual/pull/6584) Remove ESLint, migrate to oxlint, and enforce new import sorting rules across files. — thanks @MatissJanis
 - [#6592](https://github.com/actualbudget/actual/pull/6592) Add custom checks to CodeRabbit configuration for settings evaluation, linting, and typecheck enforcement. — thanks @MatissJanis
-- [#6593](https://github.com/actualbudget/actual/pull/6593) Switch flathub validation to flatpak-builder-lint for metainfo validations — thanks @MikesGlitch
+- [#6593](https://github.com/actualbudget/actual/pull/6593) Switch Flathub validation to flatpak-builder-lint for metainfo validations — thanks @MikesGlitch
 - [#6608](https://github.com/actualbudget/actual/pull/6608) Bump react-router version from 7.9.6 to 7.12.0 for improved functionality and performance. — thanks @dependabot
-- [#6611](https://github.com/actualbudget/actual/pull/6611) Update flathub screenshots to better comply with quality guidelines — thanks @MikesGlitch
+- [#6611](https://github.com/actualbudget/actual/pull/6611) Update Flathub screenshots to better comply with quality guidelines — thanks @MikesGlitch
 - [#6626](https://github.com/actualbudget/actual/pull/6626) Remove the force reload feature from the application settings. — thanks @MatissJanis
 - [#6627](https://github.com/actualbudget/actual/pull/6627) Copy hex color definitions from colors.ts (oldColors) into palette.ts — thanks @Juulz
 - [#6636](https://github.com/actualbudget/actual/pull/6636) lint: patch some low-hanging fruit lint violations — thanks @MatissJanis
