Change category to Maintenance and fix linting issues
Updated category from Enhancements to Maintenance and fixed linting issues related to react-hooks/exhaustive-deps in DateSelect.

--- a/upcoming-release-notes/6864.md
+++ b/upcoming-release-notes/6864.md
@@ -1,6 +1,6 @@
 ---
-category: Enhancements
+category: Maintenance
 authors: [joel-jeremy]
 ---
 
-Refactor Pikaday initialization in DateSelect using `useEffectEvent` to resolve linting issues.
+Fix react-hooks/exhaustive-deps in DateSelect
