[skip ci] Change category to Maintenance and update migration text

--- a/upcoming-release-notes/6140.md
+++ b/upcoming-release-notes/6140.md
@@ -1,6 +1,6 @@
 ---
-category: Enhancements
+category: Maintenance
 authors: [joel-jeremy]
 ---
 
-Migrate account and budget state management from Redux to React Query with updated hooks.
+Migrate account state management from Redux to React Query with updated hooks.
