Correctly hide when feature is disabled. Update release notes.

--- a/upcoming-release-notes/6414.md
+++ b/upcoming-release-notes/6414.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [sjones512]
 ---
 
-This PR looks to add the ability to use the new Formula Rule feature when setting the amount for split transactions discussed in issue 5949.
+Add the ability to use Formula Rules when setting the split amount.
