--- a/upcoming-release-notes/6915.md
+++ b/upcoming-release-notes/6915.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [totallynotjon]
 ---
 
-Extend Account API object include account_balance to be set, allowing the balance to be visible for reconciliation of accounts that are synced via custom importers
+The Account API now allows `balance_current` to be set, making balances visible for reconciliation when using custom importers.
