--- a/upcoming-release-notes/6922.md
+++ b/upcoming-release-notes/6922.md
@@ -3,4 +3,4 @@ category: Bugfixes
 authors: [youngcw]
 ---
 
-Fix template balance carryover handling in tracking budgets for improved accuracy and logic.
+Fix template balance carryover handling in the tracking budget
