--- a/upcoming-release-notes/6926.md
+++ b/upcoming-release-notes/6926.md
@@ -3,4 +3,5 @@ category: Bugfixes
 authors: [totallynotjon]
 ---
 
-Added reimportDeleted option to the importTransactions API and direct file import UI, allowing users to control whether previously deleted (or merged) transactions are reimported. Added to the docs for the API; including the previously undocumented opts parameter (defaultCleared, dryRun, reimportDeleted).  
+Added override option to the importTransactions API and direct file import UI, allowing users to control whether previously deleted (or merged) transactions are reimported. Added to the docs for the API; including the previously undocumented opts parameter (defaultCleared, dryRun, reimportDeleted).  
+
