--- a/upcoming-release-notes/6940.md
+++ b/upcoming-release-notes/6940.md
@@ -3,4 +3,4 @@ category: Maintenance
 authors: [MikesGlitch]
 ---
 
-Add remaining component-library componentns to design system docs
+Add remaining component-library components to design system docs
