Update release note

--- a/upcoming-release-notes/6942.md
+++ b/upcoming-release-notes/6942.md
@@ -3,4 +3,4 @@ category: Bugfixes
 authors: [joel-jeremy]
 ---
 
-Fix error handling for unknown methods when catchErrors option is enabled in the connection module.
+Update `send` function to propagate any errors and fix `catchErrors` to return the error in result when an unknown command/method is sent to the browser server.
