--- a/upcoming-release-notes/6968.md
+++ b/upcoming-release-notes/6968.md
@@ -3,4 +3,4 @@ category: Bugfixes
 authors: [PratikSilwal5]
 ---
 
-Correctly calcuate net worth, not skipping the first period of change (for example, Jan 1)
+Correctly calculate net worth, not skipping the first period of change (for example, Jan 1)
