--- a/upcoming-release-notes/6690.md
+++ b/upcoming-release-notes/6690.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [jfdoming]
 ---
 
-Implement missing logic for limit template type
+Implement missing logic for refill template type
