Add date fields to budget templates for management
Usable on the Template 'repeat every day / week'

--- a/upcoming-release-notes/6927.md
+++ b/upcoming-release-notes/6927.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [Gylfkxjyjdll]
 ---
 
-Add optional 'starting' and 'until' date fields to budget templates for improved temporal management.
+Add optional 'starting' and 'until' date fields to budget templates for improved temporal management. Usabel on the Template "repeat every day / week"
